# stl

./: CMakeLists.txt  README.md
assets/: cube.stl
src/: main.c  stl.c  stl.h
